--- a/gtk-3.20/gtk-dark.css
+++ b/gtk-3.20/gtk-dark.css
@@ -10457,7 +10457,9 @@ actionbar .budgie-panel .linked > button.launcher.image-button:backdrop, .budgie
   border: 2px solid transparent;
   background-image: none;
   opacity: 0.5;
-  transition: all 100ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+  transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition-property: opacity, border-color, background-color, background-image, box-shadow;
+  transition-duration: 0.2s; }
   .budgie-panel button.flat.launcher:hover, .budgie-panel buttonbox button.launcher:hover, buttonbox .budgie-panel button.launcher:hover, .budgie-panel buttonbox.dialog-action-area button.launcher:hover, buttonbox.dialog-action-area .budgie-panel button.launcher:hover, .budgie-panel button.launcher.osd.image-button:hover,
   .budgie-panel .launcher.button.osd.image-button:hover, .budgie-panel .inline-toolbar button.launcher:hover, .inline-toolbar .budgie-panel button.launcher:hover,
   .budgie-panel button actionbar.launcher:hover,
